--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="./styles.css" />
 
-    <title>nlw spacteime - aula 01</title>
+    <title>NLW Spacetime</title>
   </head>
   <body>
     <aside>
